samples/_failures_safe/1761393767_0af492_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_023a6d18.c: In function ‘next_token’:
./samples/SAFE/__tmp_023a6d18.c:155:24: error: expected ‘;’ at end of input
  155 |             token.value
      |                        ^
      |                        ;
./samples/SAFE/__tmp_023a6d18.c:155:13: error: expected declaration or statement at end of input
  155 |             token.value
      |             ^~~~~
./samples/SAFE/__tmp_023a6d18.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_023a6d18.c:155:13: error: expected declaration or statement at end of input
